Single top comments by Timothee
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@167 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -17,7 +17,7 @@ decaying invisibly.
 
 Within this model, two distinct processes can lead to monotop production:
 \begin{itemize}
-	\item resonant production, as shown in the diagram of Fig.~\ref{fig:feyn_prod} (a), where a scalar (S in the figure, $\varphi$ in the following) or vector ($X$) field are exchanged in the s-channel, and decay into the a spin 1/2 invisible DM candidate (called $f_{met}$ in the figure) and a top quark;
+	\item resonant production, as shown in the diagram of Fig.~\ref{fig:feyn_prod} (a), where a color triplet scalar (S in the figure, $\varphi$ in the following) or vector ($X$) field are exchanged in the s-channel, and decay into a spin 1/2 invisible new fermion (called $f_{met}$ in the figure) and a top quark;
 	\item non-resonant production, as shown in the diagrams of Fig.~~\ref{fig:feyn_prod} (b) and (c), where a flavor-changing interaction produces a top quark in association with a new colored scalar ($\Phi$) or vector ($V$). The new colored particles, called $v_{met}$ in the figure, decay invisibly, e.g. to a pair of DM particles. $v_{met}$ can also decay into a top quark and an up quark, leading to a same-sign top quark final state; a detailed study of the complementarity of this signature is beyond the scope of this Forum report.  
 \end{itemize}
 
@@ -82,13 +82,14 @@ a spin-1 boson $v_{met}$.
 \end{figure}
 
 In the following, resonant and non-resonant production are treated independently as separate benchmarks. 
-Only the case of a scalar resonance is considered for the resonant model, while the case of vector resonances is left for future studies. 
+Only the simpler case of a scalar resonance is considered as an early benchmark for the resonant model, while the case of vector 
+resonances can be studied in the future. 
 %CD: why? the vector is better in "revisiting monotop"
 
 \newthought{Resonant production}
 \label{sec:ResonantProd}
 
-In this case, a colored $2/3$-charged scalar ($\varphi^{\pm}$) is produced resonantly and decays into a top quark and a spin-$1/2$ invisible particle, $\chi$.  The dynamics of the new sector is described by the following Lagrangian:
+In this case, a colored $2/3$-charged scalar ($\varphi$) is produced and decays into a top quark and a spin-$1/2$ invisible particle, $\chi$.  The dynamics of the new sector is described by the following Lagrangian:
 
 \be\label{eq:lagrangianResonant}\bsp
 \lag &=
@@ -121,7 +122,7 @@ In this case, a colored $2/3$-charged scalar ($\varphi^{\pm}$) is produced reson
 
 where $u$ ($d$) stands for any $up$-quark ($down$-quark), 
 the index $S$ ($V$) stands for scalar (vector) field, and the index $q$ 
-runs over the three quark generations. 
+runs over the three quark generations, and the color indices are not shown. 
 
 %The first term leads to the production of the new particle and the last term allows its decay into a $up$-quark 
 %and a non interacting fermion (in particular to the top quark when $(g^{v/a}_{u\chi})^{k}$ 
@@ -132,9 +133,9 @@ runs over the three quark generations.
 
 In the notation of~\cite{Agram:2013wda}, 
 the couplings of the new colored fields to down-type quarks are
-embedded into the $3\times 3$ matrices
+embedded into the $3\times 3$ antisymmetric matrices
 $a^q_{\{S,V\}R}$ (scalar/vector couplings) and $b^q_{\{S,V\}R}$ (pseudoscalar/axial vector couplings)
-while those to the DM candidate $\chi$ and one
+while those to the new fermion $\chi$ and one
 single up-type quarks are given by the three-component vectors
 $a^{1/2}_{\{S,V\}R}$ and $b^{1/2}_{\{S,V\}R}$
 in flavor space. 
@@ -153,7 +154,9 @@ between a top squark--top--neutralino.
 \label{sec:NonResonantProd}
 
 For the non-resonant production, the top quark is produced in association with the new particle:
-either a new scalar ($\phi$) or a new vector ($V$). For simplicity, we only consider the case of a vector new particle, as the scalar case would involve a mixing with the SM Higgs boson and therefore a larger parameter space. The Lagrangian describing the dynamics of the non-resonant case is: 
+either a new scalar ($\phi$) or a new vector ($V$). For simplicity, we only consider the case of a vector new particle, 
+as the scalar case would involve a mixing with the SM Higgs boson and therefore a larger number of free parameters. 
+The Lagrangian describing the dynamics of the non-resonant case is: 
 %%CD: Full explanation is below
 % First, the new particle can be a scalar field interacting with the SM field and the dark matter
 % candidate as described in this lagrangian:
@@ -197,7 +200,7 @@ V_\mu \bar u \gmu \Big[a^1_{FC} \!+\! b^1_{FC} \gamma_5 \Big] u
 
 The strength of the interactions among these two states and a pair
 of up-type quarks is modeled via two $3\times 3$
-matrices in flavor space $a^{\{0,1\}}_{FC}$ for the scalar/vector couplings
+symmetric matrices in flavor space $a^{\{0,1\}}_{FC}$ for the scalar/vector couplings
 and $b^{\{0,1\}}_{FC}$ for the pseudoscalar/axial vector couplings.
 
 %The dynamics of this case is described by the following Lagrangian:
@@ -226,11 +229,14 @@ These assumptions are qualitatively discussed below.
 We only consider right-handed quark components, in order to simplify the model phenomenology. 
 The representation of the left-handed components under the $\SUtwo$ symmetry would lead to a 
 coupling to $down$-type quarks, since the effective theory is invariant under $\SUtwoUone$ 
-gauge symmetry. Having a coupling between the new particle and $down$-type quarks 
-would complicate the collider phenomenology, adding the
-$V \to b\bar{d} + \bar{b}d$ decay mode in addition to the invisible decay mode. 
-This in turn sets the scalar (vector) and pseudoscalar (axial vector) matrices to have 
-elements of equal values. 
+gauge symmetry. 
+%Having a coupling between the new particle and $down$-type quarks 
+%would complicate the collider phenomenology, adding the
+%$V \to b\bar{d} + \bar{b}d$ decay mode in addition to the invisible decay mode. 
+%This in turn sets the scalar (vector) and pseudoscalar (axial vector) matrices to have 
+%elements of equal values. 
+This implies the vector to be an SU(2)L singlet, hence in turn setting the vector and axial vector matrices 
+to have elements of equal values. 
 
 Furthermore, in order to be visible at the LHC in the monotop final state, 
 these models must include a strong coupling between the new particle $\phi$ and $t\chi$.
@@ -246,7 +252,7 @@ and light quarks ($a_{FC}$), are set to non-zero values
 %& (a^0_{FC})_{13} = (a^0_{FC})_{31} = a
 %}%% (a^1_{FC})_{13} = (a^1_{FC})_{31} = a \ , \\
 %% &  (a^q_{SR})_{12} = \ -(a^q_{SR})_{21} = (a^{1/2}_{SR})_3 =
-& (a^q_{VR})_{11} = (a^{1/2}_{VR})_3 = a
+& (a^q_{SR})_{11} = (a^{1/2}_{SR})_3 = a
 \esp 
 \ee
 
@@ -307,21 +313,22 @@ previous Section, are as follows for the two models considered.
 
 \item Resonant scalar model described by the Lagrangian~\eqref{eq:lagrangianResonant}
   \begin{itemize}
-  \item \texttt{AQS} and \texttt{BQS}: $3\times 3$ matrices (flavour space) fixing the coupling of the scalar $\phi$ ($S$ stands for scalar) and $down$-type quarks ($Q$ stands for quarks), previously called $a/b_{SR}$.
-  \item \texttt{A12S} and \texttt{B12S}: $3\times 1$ matrices (flavour space) fixing the coupling of the DM candidate $\chi$ (where $12$ stands for spin-$1/2$ fermion) and $up$-type quarks, previously called $a^{1/2}_{VR}$.
-  \item particle names: the scalar $\phi^{\pm}$ is labeled $S$ and the fermion $\chi$ is $f_{met}$
+  \item \texttt{AQS} and \texttt{BQS}: $3\times 3$ matrices (flavour space) fixing the coupling of the scalar $\phi$ ($S$ stands for scalar) and $down$-type quarks ($Q$ stands for quarks), previously called $a^q/b^q_{SR}$.
+  \item \texttt{A12S} and \texttt{B12S}: $3\times 1$ matrices (flavour space) fixing the coupling of the new fermion $\chi$ (where $12$ stands for spin-$1/2$ fermion) and $up$-type quarks, previously called $a^{1/2}_{VR}$.
+  \item particle names: the scalar $\phi$ is labeled $S$ and the fermion $\chi$ is $f_{met}$
   \end{itemize}  
   
 \item Non-resonant vectorial model described by the Lagrangian~\eqref{eq:lagrangianNonResonantVector}
 \begin{itemize}
-\item \texttt{A1FC} and \texttt{B1FC}: $3\times 3$ matrices (flavour space) fixing the coupling of the vector $V$ ($1$ stands for vector) and $up$-type quarks, previously called $a^0_{FC}$. 
+\item \texttt{A1FC} and \texttt{B1FC}: $3\times 3$ matrices (flavour space) fixing the coupling of the vector $V$ ($1$ stands for vector) and $up$-type quarks, previously called $a^1_{FC}$. 
 \item particle name: the vector $V$ is labelled $v_{met}$, while the dark matter candidate $\chi$ is not implemented (as this model assumes $\BR{V}{\chi\chi}=100\%$)
 \end{itemize}
 
 \end{enumerate}
 
-The width of the scalar resonance and of the new vector are set to only the allowed decays in the models,
-namely a DM candidate and a top quark for the resonant model. 
+The width of the scalar resonance and of the new vector are set to all allowed decays in the ATLAS implementation,
+while the only allowed decay in the CMS implementation to the new fermion and a top quark for the resonant model. 
+\textbf{[TODO: Can we reach a consensus between ATLAS and CMS?]}
 
 %In the case of the non-resonant model and . 
 %Further studies will show whether to a top and an up quark 
@@ -338,24 +345,34 @@ namely a DM candidate and a top quark for the resonant model.
 The relevant parameters for the resonant model are:
 \begin{itemize}
 	\item The mass of the new scalar $\phi$;
-	\item The mass of the DM candidate $\chi$;
-	\item The coupling of the new scalar to the DM candidate and top quark $a$, 
+	\item The mass of the new fermion $\chi$;
+	\item The coupling of the new scalar to the new fermion and top quark $a$, 
 	related to the width of the scalar in the minimal width assumption;
 \end{itemize}	
 
 The relevant parameters for the non-resonant model are:
 \begin{itemize}
 	\item The mass of the new vector $V$;
-	\item The mass of the DM candidate $\chi$;
+	%\item The mass of the new fermion $\chi$;
 	\item The coupling of the new vector to the up and top quark $a$, 
 	related to the width of the scalar in the minimal width assumption;
-	\item The coupling of the new vector to the DM candidate $\chi$, 
+	\item The coupling of the new vector to the new fermion $\chi$, 
 	related to the branching fraction of the vector into invisible and visible particle,
 	and as a consequence to the width of the vector. 
 \end{itemize}	
 
-It has been checked for the non-resonant model that the relevant kinematics does not change when changing the width of the resonance. Figures~\ref{fig:appB:Vmass}, \ref{fig:appB:pTV} and~\ref{fig:appB:pTtop} show the $V$ mass distribution, the transverse momentum for $V$ and for the top quark from the $V\to t\bar{u}$ decay, for different $V$ masses and widths.
-These figures are relevant independently of the $V$ decay mode (be it visible or invisible). 
+In the case of the non-resonant model, the current implementation
+of the model does not allow changing the DM mass directly as the
+new vector is treated as a particle that always decays invisibly. 
+
+It has been checked for the non-resonant model that the relevant kinematics 
+does not change when changing 
+the width of the resonance, for widths up to 10\% of the resonance mass. 
+Figures~\ref{fig:appB:Vmass} and \ref{fig:appB:pTV} show 
+the $V$ mass distribution, the transverse momentum for $V$ 
+%and for the top quark 
+in the case of the $V\to t\bar{u}$ decay, for different $V$ masses and widths.
+Since they only show kinematic quantities related to the mediator, these figures are relevant independently of the $V$ decay mode (be it visible or invisible). 
 
 \begin{figure}[!h!tpd]
 	\centering
@@ -380,15 +397,15 @@ These figures are relevant independently of the $V$ decay mode (be it visible or
 \end{figure}
 
 
-\begin{figure}[!h!tpd]
-	\centering
-	\includegraphics[width=1.0\textwidth]{figures/singletop/other_top_pt}
-	\caption{
-		Distribution of the top quark $p_T$ produced in association with $V$ in $gu\to tV$ for $m_V$ = {200, 600, 1000}~GeV (from left to right) and for three different
-		visible decay width (computed from Madgraph directly, $1\%$ and $10\%$).
-	}
-	\label{fig:appB:pTtop}
-\end{figure}
+%\begin{figure}[!h!tpd]
+%	\centering
+%	\includegraphics[width=1.0\textwidth]{figures/singletop/other_top_pt}
+%	\caption{
+%		Distribution of the top quark $p_T$ produced in association with $V$ in $gu\to tV$ for $m_V$ = {200, 600, 1000}~GeV (from left to right) and for three different
+%		visible decay width (computed from Madgraph directly, $1\%$ and $10\%$).
+%	}
+%	\label{fig:appB:pTtop}
+%\end{figure}
 
 The limited timescale allowed to reach a consensus for
 the recommendations contained in this document has not allowed further studies on the 
