EW section, Suchita's reinterpretation
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@168 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -62,7 +62,7 @@
   \usepackage[protrusion=true,expansion=true,tracking=true,kerning=true,spacing=true]{microtype}
 }{}
 \fvset{fontsize=\normalsize} % default font size for fancy-verbatim environments
-\usepackage{todo} % for todo list
+\usepackage[marginpar]{todo} % for todo list
 
 % Prints an asterisk that takes up no horizontal space.
 % Useful in tabular environments.
@@ -273,6 +273,10 @@
 \label{app:TTBar_Xsecs}
 \input{tex/TTBar_Xsecs_Appendix.tex}
 %\fi 
+
+\chapter{Appendix: Presentation of experimental results for reinterpretation}
+\label{app:Presentation_Of_Experimental_Results}
+\input{tex/Presentation_Of_Experimental_Results.tex}
 
 %%FIXME: it does not understand Collaboration. Fix here rather than hacking bib file?
 % \bibliographystyle{unsrtnat}
