--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -80,6 +80,7 @@ implementation.
 \input{tex/EWSpecificModels_SVMediators}
 
 \section{EFT models with direct DM-boson couplings}
+\label{sec:EFT_models_with_direct_DM_boson_couplings}
 \input{tex/EWSpecificModels_EFT}
 
 \section{Specific simplified models including EW bosons, tailored to Higgs+MET searches}
