--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -36,7 +36,32 @@ There is one possible UV-model to obtain a zero value for $c_6$ and non-zero val
 %
 and order of unity. 
 
+\section{Simplified model corresponding to dimension-5 EFT operator}
+
+% +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+%   Linda 11/5/15
+% +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+As an example of a simplified model corresponding to the dimension-5 EFT operator 
+described in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings}, 
+we consider a Higgs portal with a scalar mediator. Models of this kind
+are among the most concise versions of simplified models that produce 
+couplings of Dark Matter to pairs of gauge-bosons.  Scalar fields may couple directly to pairs of electroweak gauge bosons, 
+but must carry part of the electroweak vev.  One may thus consider a simple model where Dark Matter couples to a a scalar 
+singlet mediator, which mixes with the fields in the Higgs sector.
+\begin{equation}
+L\subset m_s S^2 + \lambda S^2H^2 +\lambda^{'} S H^2 + y S \chi \overline{\chi}
+\end{equation}
+Where H is a field in the Higgs sector that contains part of the electroweak vev, 
+S is a heavy scalar singlet and $\chi$ is a Dark Matter field. 
+There is then an S channel diagram where DM pairs couple to the singlet field S, 
+which then mixes with a Higgs-sector field, and couples to W and Z bosons. 
+This diagram contains 2 insertions of EW symmetry breaking fields, 
+corresponding in form to the effective dimension-5 operator in the previous section.   
+
 \section{Tabulated cross-sections}
+
+\subsection{photon+MET signal, s-channel vector mediator model}
 
 \subsection{Higgs+MET signal, vector mediator model}
 
