--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -16,7 +16,7 @@ are recommended for Higgs+MET searches:
 	plus an intermediate heavy pseudoscalar particle $A^0$, in turn decaying into two DM particles (Fig. \ref{fig:feyn_prod_monoH} (b)). 
 \end{itemize}
 
-\todo{AB: remove the extra Z in the diagram for the MonoHZprimeqq}
+\Todo{AB: remove the extra Z in the diagram for the MonoHZprimeqq}
 
 \begin{figure}[!h!tpd]
 	\centering
@@ -283,7 +283,7 @@ Analyses should perform further studies, beyond those studies performed for the 
 		\includegraphics[width=0.47\linewidth]{figures/EW/monoH/zpzp100/truth_bb_deltar} %\label{fig:met_cmp_low}
 	}
 	\hfill
-	\caption{Comparison of the kinematic distributions for the two leading jets from the Higgs decay in the vector $Z^\prime$ simplified model, 
+	\caption{Comparison of the kinematic distributions for the two leading $b-$ jets ()from the Higgs decay) in the vector $Z^\prime$ simplified model, 
 		when fixing the $Z^\prime$ mass to 100 GeV and varying the DM mass. 
 		\label{fig:VectorHbb_100}}
 \end{figure}
