--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -793,3 +793,121 @@
 	year = {2015}, 
 	note = "[Online; accessed 04-May-2015]"
 }
+
+%%%%% Appendix reinterpretation
+
+%%% original SModelS paper %%%
+@article{Kraml:2013mwa,
+	author         = "Kraml, Sabine and Kulkarni, Suchita and Laa, Ursula and
+	Lessa, Andre and Magerl, Wolfgang and Proschofsky, Doris and
+	Waltenberger, Wolfgang",
+	title          = "{SModelS: a tool for interpreting simplified-model
+	results from the LHC and its application to
+	supersymmetry}",
+	journal        = "Eur.Phys.J.",
+	volume         = "C74",
+	pages          = "2868",
+	doi            = "10.1140/epjc/s10052-014-2868-5",
+	year           = "2014",
+	eprint         = "1312.4175",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1312.4175;%%",
+}
+
+@article{Kraml:2014sna,
+	author         = "Kraml, Sabine and Kulkarni, Suchita and Laa, Ursula and
+	Lessa, Andre and Magerl, Veronika and others",
+	title          = "{SModelS v1.0: a short user guide}",
+	year           = "2014",
+	eprint         = "1412.1745",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "LPSC14295, HEPHY-PUB-945-14",
+	SLACcitation   = "%%CITATION = ARXIV:1412.1745;%%",
+}
+
+@article{Kim:2015wza,
+	author         = "Kim, Jong Soo and Schmeier, Daniel and Tattersall, Jamie
+	and Rolbiecki, Krzysztof",
+	title          = "{A framework to create customised LHC analyses within
+	CheckMATE}",
+	year           = "2015",
+	eprint         = "1503.01123",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "IFT-UAM-CSIC-15-021",
+	SLACcitation   = "%%CITATION = ARXIV:1503.01123;%%",
+}
+
+
+@article{Dumont:2014tja,
+	author         = "Dumont, B. and Fuks, B. and Kraml, S. and Bein, S. and
+	Chalons, G. and others",
+	title          = "{Toward a public analysis database for LHC new physics
+	searches using MADANALYSIS 5}",
+	journal        = "Eur.Phys.J.",
+	number         = "2",
+	volume         = "C75",
+	pages          = "56",
+	doi            = "10.1140/epjc/s10052-014-3242-3",
+	year           = "2015",
+	eprint         = "1407.3278",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-PH-TH-2014-109, LAPTH-048-14, LPSC14143",
+	SLACcitation   = "%%CITATION = ARXIV:1407.3278;%%",
+}
+
+@article{Conte:2014zja,
+	author         = "Conte, Eric and Dumont, Béranger and Fuks, Benjamin and
+	Wymant, Chris",
+	title          = "{Designing and recasting LHC analyses with MadAnalysis
+	5}",
+	journal        = "Eur.Phys.J.",
+	number         = "10",
+	volume         = "C74",
+	pages          = "3103",
+	doi            = "10.1140/epjc/s10052-014-3103-0",
+	year           = "2014",
+	eprint         = "1405.3982",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-PH-TH-2014-088, LPSC-14-079, LAPTH-033-14,
+	MCNET-14-11",
+	SLACcitation   = "%%CITATION = ARXIV:1405.3982;%%",
+}
+
+@article{deFavereau:2013fsa,
+	author         = "de Favereau, J. and others",
+	title          = "{DELPHES 3, A modular framework for fast simulation of a
+	generic collider experiment}",
+	collaboration  = "DELPHES 3",
+	journal        = "JHEP",
+	volume         = "1402",
+	pages          = "057",
+	doi            = "10.1007/JHEP02(2014)057",
+	year           = "2014",
+	eprint         = "1307.6346",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	SLACcitation   = "%%CITATION = ARXIV:1307.6346;%%",
+}
+
+@article{Papucci:2014rja,
+	author         = "Papucci, Michele and Sakurai, Kazuki and Weiler, Andreas
+	and Zeune, Lisa",
+	title          = "{Fastlim: a fast LHC limit calculator}",
+	journal        = "Eur.Phys.J.",
+	number         = "11",
+	volume         = "C74",
+	pages          = "3163",
+	doi            = "10.1140/epjc/s10052-014-3163-1",
+	year           = "2014",
+	eprint         = "1402.0492",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-TH-2014-019, DESY-14-010, KCL-PH-TH-2014-04,
+	MCTP-14-03",
+	SLACcitation   = "%%CITATION = ARXIV:1402.0492;%%",
+}
