--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -130,7 +130,7 @@ benchmark points are shown in Appendix~\ref{app:EWSpecificModels_Appendix}.
 	}    
 	\hfill
 	\subfloat[Missing transverse momentum distribution for the hadronic W+MET final state.\label{fig:DMV_EW_Whad_MET}]{%
-		\includegraphics[width=0.9\textwidth]{figures/EW/monoWhad_Destructive/metPt}
+		\includegraphics[width=0.47\textwidth]{figures/EW/monoWhad_Destructive/metPt}
 	}    
 	\caption{Kinematic distributions relevant for searches with W, Z and photons in the final state, 
 		for the simplified model with a vector mediator exchanged in the $s-$channel.}
@@ -139,7 +139,10 @@ benchmark points are shown in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
 \subsection{Colored scalar mediator exchanged in the t-channel}
 
-The model parameters with emission of an EW boson follow those in Section~\ref{subsec:MonojetLikeModels}.   A representative Feynman diagram can be
+The model parameters with emission of an EW boson 
+generally follow those in Section~\ref{subsec:MonojetLikeModels},
+even though fewer diagrams are involved.   
+A representative Feynman diagram can be
 constructed by replacing a gluon in Fig.~\ref{fig:tchannelMonojet}
 with a $\gamma,W,Z$ boson.
 
@@ -148,11 +151,14 @@ with varying dark matter and mediator mass, before any selection.
 The acceptance for a series of simplified analysis cuts 
 (MET$>$350 GeV, leading jet $p_T >$ 40 GeV, minimum azimuthal angle between jet and MET > 0.4) 
 applied at the generator level is shown in Figure~\ref{fig:TChan_EW_Zhad_acc}. 
-The parameter scan is still under discussion. 
+The parameter scan is still under discussion~\Todo{The parameter scan, 
+	and the conclusions that can be drawn from the plots below, need to be
+	cross-checked with those in the monojet channel.}
+
 
 \begin{figure}[h!]
 	\centering  
-	\includegraphics[width=0.9\textwidth]{figures/EW/monoZhad_TChannel/metPt}
+	\includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/metPt}
 	\caption{Missing transverse momentum distribution for the hadronic Z+MET final state,
 		for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
 	\label{fig:TChan_EW_Zhad_MET}
@@ -160,7 +166,7 @@ The parameter scan is still under discussion.
 
 \begin{figure}[h!]
 	\centering  
-	\includegraphics[width=0.9\textwidth]{figures/EW/monoZhad_TChannel/acc}
+	\includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/acc}
 	\caption{Acceptance table for the hadronic Z+MET final state,
 		for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
 	\label{fig:TChan_EW_Zhad_acc}
